tests/baselines/reference/dynamicImportTrailingComma.errors.txt
dynamicImportTrailingComma.ts(2,12): error TS1009: Trailing comma not allowed.


==== dynamicImportTrailingComma.ts (1 errors) ====
    const path = './foo';
    import(path,);
               ~
!!! error TS1009: Trailing comma not allowed.